--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,27 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Space tourism website</title>
+  <link rel="stylesheet" href="/dist/style.css">
+  <title>Space Tourism Website</title>
+
 </head>
+
 <body>
+  <header class="header">
 
-  00 Home
-  01 Destination
-  02 Crew
-  03 Technology
+    <nav class="main-menu">
 
-  So, you want to travel to
-  Space
-  Let’s face it; if you want to go to space, you might as well genuinely go to 
-  outer space and not hover kind of on the edge of it. Well sit back, and relax 
-  because we’ll give you a truly out of this world experience!
+      <!-- Icon -->
+      <a href="/" class="header-logo">
+        <img class="svr-header-logo" src="/assets/shared/logo.svg">
+      </a>
 
-  Explore
+      <!-- Hamburguer button -->
+      <a href="/" class="hamburguer-menu">
+        <img class="svg-hamburguer" src="/assets/shared/icon-hamburger.svg">
+      </a>
+    
+      <!-- Nav Links -->
+      <ul class="header-list">
+        <li class="header-list-item">
+          <a class="link-list"><span class="number">00 </span>Home</a>
+        </li>
+
+        <li class="header-list-item">
+          <a class="link-list"><span class="number">01 </span>Destination</a>
+        </li>
+
+        <li class="header-list-item">
+          <a class="link-list"><span class="number">02 </span>Crew</a>
+        </li>
+
+        <li class="header-list-item">
+          <a class="link-list"><span class="number">03 </span>Technology</a>
+        </li>
+      </ul>
+
+    </nav>
+  </header>
+
+  <main>
+
+    <section class="content">
+      <div class="text">
+
+        <!-- Text home page -->
+
+        <h5>So, you want to travel to</h5>
+        <h1>Space</h1>
+
+        <p>Let's face it; if you want to go to space, you might as well genuinely go to 
+        outer space and not hover kind of on the edge of it. Well sit back, and relax 
+        because we'll give you a truly out of this world experience!</p>
+
+      </div>
+    </section>
+
+    <div class="explore">
+      <button class="btn-explore">Explore</button>
+    </div>
+
+  </main>
 
 </body>
 </html>
