--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -12,64 +12,65 @@
 </head>
 
 <body>
-  <header class="header">
+  <div class="page">
+    <header class="header">
 
-    <nav class="main-menu">
+      <nav class="main-menu">
 
-      <!-- Icon -->
-      <a href="/" class="header-logo">
-        <img class="svr-header-logo" src="/assets/shared/logo.svg">
-      </a>
+        <!-- Icon -->
+        <a href="/" class="header-logo">
+          <img class="svr-header-logo" src="/assets/shared/logo.svg">
+        </a>
 
-      <!-- Hamburguer button -->
-      <a href="/" class="hamburguer-menu">
-        <img class="svg-hamburguer" src="/assets/shared/icon-hamburger.svg">
-      </a>
-    
-      <!-- Nav Links -->
-      <ul class="header-list">
-        <li class="header-list-item">
-          <a class="link-list"><span class="number">00 </span>Home</a>
-        </li>
+        <!-- Hamburguer button -->
+        <a href="/" class="hamburguer-menu">
+          <img class="svg-hamburguer" src="/assets/shared/icon-hamburger.svg">
+        </a>
+      
+        <!-- Nav Links -->
+        <ul class="header-list">
+          <li class="header-list-item">
+            <a class="link-list"><span class="number">00 </span>Home</a>
+          </li>
 
-        <li class="header-list-item">
-          <a class="link-list"><span class="number">01 </span>Destination</a>
-        </li>
+          <li class="header-list-item">
+            <a class="link-list"><span class="number">01 </span>Destination</a>
+          </li>
 
-        <li class="header-list-item">
-          <a class="link-list"><span class="number">02 </span>Crew</a>
-        </li>
+          <li class="header-list-item">
+            <a class="link-list"><span class="number">02 </span>Crew</a>
+          </li>
 
-        <li class="header-list-item">
-          <a class="link-list"><span class="number">03 </span>Technology</a>
-        </li>
-      </ul>
+          <li class="header-list-item">
+            <a class="link-list"><span class="number">03 </span>Technology</a>
+          </li>
+        </ul>
 
-    </nav>
-  </header>
+      </nav>
+    </header>
 
-  <main>
+    <main>
 
-    <section class="content">
-      <div class="text">
+      <section class="content">
+        <div class="text">
 
-        <!-- Text home page -->
+          <!-- Text home page -->
 
-        <h5>So, you want to travel to</h5>
-        <h1>Space</h1>
+          <h5>So, you want to travel to</h5>
+          <h1>Space</h1>
 
-        <p>Let's face it; if you want to go to space, you might as well genuinely go to 
-        outer space and not hover kind of on the edge of it. Well sit back, and relax 
-        because we'll give you a truly out of this world experience!</p>
+          <p>Let's face it; if you want to go to space, you might as well genuinely go to 
+          outer space and not hover kind of on the edge of it. Well sit back, and relax 
+          because we'll give you a truly out of this world experience!</p>
 
+        </div>
+      </section>
+
+      <div class="explore">
+        <button class="btn-explore">Explore</button>
       </div>
-    </section>
 
-    <div class="explore">
-      <button class="btn-explore">Explore</button>
-    </div>
-
-  </main>
-
+    </main>
+  </div>
 </body>
 </html>
