--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -26,12 +26,14 @@
         </a>
 
         <!-- Hamburguer button -->
-        <a href="/" class="hamburguer-menu hide-for-desktop hide-for-tablet">
-          <img class="svg-hamburguer" src="/assets/shared/icon-hamburger.svg">
+        <a id="btnHamburguer" href="#" class="hamburguer-btn hide-for-desktop hide-for-tablet">
+          <span></span>
+          <span></span>
+          <span></span>
         </a>
       
         <!-- Nav Links -->
-        <ul class="header-list">
+        <ul id="headerList" class="header-list">
           <li class="header-list-item">
             <a class="link-list"><span class="number">00 </span>Home</a>
           </li>
@@ -79,5 +81,7 @@
 
     </main>
   </div>
+
+  <script src="/apps/js/script.js"></script>
 </body>
 </html>
