mobile menu animation

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -33,23 +33,25 @@
         </a>
       
         <!-- Nav Links -->
-        <ul id="headerList" class="header-list">
-          <li class="header-list-item">
-            <a class="link-list"><span class="number">00 </span>Home</a>
-          </li>
+        <div class="background-header-list">
+          <ul id="headerList" class="header-list">
+            <li class="header-list-item">
+              <a class="link-list"><span class="number">00 </span>Home</a>
+            </li>
 
-          <li class="header-list-item">
-            <a class="link-list"><span class="number">01 </span>Destination</a>
-          </li>
+            <li class="header-list-item">
+              <a class="link-list"><span class="number">01 </span> Destination</a>
+            </li>
 
-          <li class="header-list-item">
-            <a class="link-list"><span class="number">02 </span>Crew</a>
-          </li>
+            <li class="header-list-item">
+              <a class="link-list"><span class="number">02 </span>Crew</a>
+            </li>
 
-          <li class="header-list-item">
-            <a class="link-list"><span class="number">03 </span>Technology</a>
-          </li>
-        </ul>
+            <li class="header-list-item">
+              <a class="link-list"><span class="number">03 </span>Technology</a>
+            </li>
+          </ul>
+        </div>
 
       </nav>
     </header>
